# gendata_package

./: .buildinfo  .gitignore  LICENSE.txt  README.md  README.rst  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  usage.html
.github/workflows/: sphinx.yml
_sources/: index.rst.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  usage.rst
scripts/: grm.py
src/: core.py
src/gendata/: __init__.py  core.py  cov.py  grm.py  utils.py
src/ssgac_gendata/: constants.py  core.py  cov.py  grm.py  utils.py
