[metadata]
name = ssgac_gendata
version = 0.1
author = Michael Bennett
author_email = mbennett.ssgac@gmail.com
description = A package that provides an API for reading and operating on genetic data in python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michaelbennett99/gendata_package
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
install_requires =
    numpy
    pandas
    scipy
    numba
    pysnptools
python_requires = >=3.9

[options.packages.find]
where = ./src/ssgac_gendata
